# Paradox-3D-Renderer

./: CMakeLists.txt  README.md  build.json  library.cmake  makefile
.github/workflows/: c-c++.yml
api/c/: CMakeLists.txt
api/c/paradox-3d-renderer/include/paradox-3d-renderer/: defines.h  mesh.h  ogl_wrapper.h  opengl.h  renderer.h  shader.h  texture.h  vertex.h
api/c/paradox-3d-renderer/src/: glfw_wrapper.c  ogl_wrapper.c
api/c/paradox-3d-renderer/src/paradox-3d-renderer/: dx11_wrapper.c  mesh.c  opengl.c  renderer.c  shader.c  texture.c  vertex.c  vkn_wrapper.c
api/cpp/: CMakeLists.txt
api/cpp/paradox-3d-renderer/include/paradox-3d-renderer/: defines.hpp
